--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
     <head>
-        Hello World!
+        <title>
+            Hello World! 
+        </title>
     </head>
     <body style='font:100; color:yellowgreen'>
-        <br>
-        <br>
-        This is my github page!
+        <h1>
+            This is my github page!
+        </h1>
+        
     </body>
 </html>
